# oop2_project

./: CMakeLists.txt  README.docx  README.md
include/Commands/: CommandManager.h  ICommand.h  PlaceBombCommand.h  PlaceUnitCommand.h
include/Core/: Constants.h  Game.h  GameManager.h  GameObject.h  MovingObject.h  StaticObject.h  Timer.h
include/Entities/Base/: Collectible.h  Projectile.h  Robot.h  SquadMember.h
include/Entities/Collectibles/: Coin.h  HealthPack.h
include/Entities/Projectiles/: Bomb.h  Bullet.h  RobotBullet.h  SniperBullet.h
include/Entities/Robots/: BasicRobot.h  FireRobot.h  StealthRobot.h
include/Factories/: CollectibleFactory.h  ProjectileFactory.h  RobotFactory.h  SquadMemberFactory.h
include/Graphics/: Animation.h  AnimationComponent.h
include/Managers/: AudioManager.h  DynamicWaveGenerator.h  EntityManager.h  HighScoreManager.h  ProjectileManager.h  ResourceManager.h  RobotManager.h  SettingsManager.h  SquadMemberManager.h  WaveManager.h
include/Physics/: CollisionCategories.h  PhysicsContactListener.h  PhysicsUtils.h  PhysicsWorld.h
include/States/: GameOverState.h  IState.h  LevelsState.h  MenuState.h  MoreState.h  PauseState.h  PlayState.h  SettingsState.h  SplashState.h  StateMachine.h  VictoryState.h
include/Systems/: AnimationSystem.h  EventSystem.h
include/UI/: Button.h  GridRenderer.h  HUD.h  Slider.h
include/Utils/: ConfigLoader.h
resources/: CMakeLists.txt
resources/config/: Settings.cfg  collectibles.cfg  game.cfg  physics.cfg  projectiles.cfg  robots.cfg  units.cfg
src/: CMakeLists.txt  main.cpp
src/Commands/: CommandManager.cpp  PlaceBombCommand.cpp  PlaceUnitCommand.cpp
src/Core/: Game.cpp  GameManager.cpp  GameObject.cpp  MovingObject.cpp  StaticObject.cpp  Timer.cpp
src/Entities/Base/: Collectible.cpp  (+3 more)
src/Factories/: CollectibleFactory.cpp  ProjectileFactory.cpp  RobotFactory.cpp  SquadMemberFactory.cpp
src/Graphics/: Animation.cpp  AnimationComponent.cpp
src/Managers/: AudioManager.cpp  DynamicWaveGenerator.cpp  HighScoreManager.cpp  ProjectileManager.cpp  ResourceManager.cpp  RobotManager.cpp  SettingsManager.cpp  SquadMemberManager.cpp  WaveManager.cpp
src/Physics/: PhysicsContactListener.cpp  PhysicsWorld.cpp
src/States/: GameOverState.cpp  IState.cpp  LevelsState.cpp  MenuState.cpp  MoreState.cpp  PauseState.cpp  PlayState.cpp  SettingsState.cpp  SplashState.cpp  StateMachine.cpp  VictoryState.cpp
src/Systems/: AnimationSystem.cpp  EventSystem.cpp
src/UI/: Button.cpp  GridRenderer.cpp  HUD.cpp  Slider.cpp
src/Utils/: ConfigLoader.cpp
(+15 files in other folders)
